compiler/tests/ar/errors/pure_vec_mut.salam
// لغة: العربية
// توقع: E012
نقي دالة املأ(عدد: صحیح): صحیح:
    متغير قیمة := متجه {} بوصفه متجه<صحیح> قیمة.أضف(عدد)
    أرجع قیمة.طول()
نهاية

دالة الرئیسیة:
    اطبع املأ(3)
نهاية
